# mind-nerve

./: .autoresearch-consensus.py  .autoresearch-metric.sh  .coverage  .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Mind.toml  PHASE_1_PROMPT.md  README.md  ROADMAP.md  SECURITY.md  autoresearch.yaml  autoresearch_results.draft-phase.tsv  docker-compose.yml  program.md  pyproject.toml  requirements.in  run-autoresearch-rotate.sh  run-autoresearch.sh  stats.sh
.arch-mind/: key.local  last_summary.json  rules.mind
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-audit.yml  release.yml
RFCs/: INDEX.md  MERGE_AUDIT_FOLLOWUPS.md
audits/: 2026-05-18-a1.5-native-encoder-report.md  arch-mind-mindc-v0.4.0.json  arch-mind-mindc-v0.4.3.json  arch-mind-mindc-v0.4.4.json
catalog-builder/: README.md  build_corpus.py  build_index.py  build_prior.py  calibrate_stride.py  clone_all.sh  clone_manifest_v1.tsv  clone_manifest_v2.tsv  clone_manifest_v3.tsv  clone_manifest_v4.tsv  extract_links.py  filter_oss.py  freeze.py  train_bpe.py  train_phase1.py
catalog-builder/format/: __init__.py  cat_v2.py
cli/: main.mind
docs/: benchmarks.md  catalog_and_training_plan.md  data_governance.md  dataset.md  deployment.md  distribution_plan.md  model_card.md  native_mind_trainer_repo_spec.md  privacy.md  reproducibility.md
docs/catalog_freezes/: phase1-v1.0.manifest.json  phase1-v1.0.md  phase1-v1.1-oss.manifest.json  tokenizer-v1.0.manifest.json  tokenizer-v1.0.md  tokenizer-v1.1-oss.manifest.json  v1.0.manifest.json  v1.0.md  v1.1-oss.manifest.json  v1.1-oss.md
docs/plans/: FINAL_SHIP_PLAN_2026_05_17.md
integrations/: mindllm_attestation.mind
integrations/claude-code/: README.md  catalog.ts  config.ts  fake-mind-nerve.sh  logger.ts  package-lock.json  package.json  preselect.test.ts  preselect.ts  projector.ts  subprocess.test.ts  subprocess.ts  tsconfig.json
integrations/codex/: README.md  hook.sh
integrations/installer/: README.md  package-lock.json  package.json  tsconfig.json
integrations/installer/src/: backup.ts  detect.ts  errors.ts  index.ts  install.ts  instruction_block.ts  mcp_rewire.ts  projector.ts  registry.ts  uninstall.ts
integrations/installer/test/: backup.test.ts  detect.test.ts  install.test.ts  instruction_block.test.ts  mcp_rewire.test.ts  projector.test.ts  registry.test.ts  uninstall.test.ts
integrations/installer/test/fixtures/: aider-conf-before.yml  claude-settings-before.json  codex-config-before.toml  cody-config-before.json  continue-config-before.json  copilot-instructions-before.md  gemini-settings-before.json  openclaw-before.json  qodo-airules-before.md  vibe-config-before.toml  zed-settings-before.json
integrations/mcp/: DESIGN.md  README.md
mind/exports/: README.md  c_abi.mind
mind/kernels/: README.md  batched_matmul_q16.mind  embedding_q16.mind  encode.mind  gelu_q16.mind  l2_norm_q16.mind  layernorm_q16.mind  matmul_blas.mind  matmul_q16.mind  sliding_window.mind  topk_q16.mind
mind/luts/: README.md  exp_q16.mind  recip_q32.mind  rsqrt_q16.mind  softmax_q16.mind  sqrt_q16.mind  tanh_q16.mind
mind/runtime/: blas_shims_i64.c  lut_cache.c  lut_shims.c
python/mind_nerve/: __init__.py  _native.py  _runtime_dir.py  attestation.py  cli.py  daemon.py  discovery.py  ensure.py  eval_metrics.py  federation.py  inference.py  installer.py  marketplace.py  mcp_server.py  mind_train.py  preselect_hook.py  scan_repo.py  types.py
python/mind_nerve/templates/: ga.star.mind-nerve-routed.plist  mind-nerve-routed.service
spec/: architecture.md  federated_routing.md  integration_surface.md  mind_mem_v4_integration.md  numerics.md  quality_targets.md  quantization.md  skill_marketplace.md
src/: chain_log.mind  clock.mind  encoder_kernels.mind  evidence.mind  inference.mind  lib.mind  loader.mind  model.mind  q16_16.mind  runtime_ffi.mind  sha256.mind  tokenizer.mind  top_k.mind
tests/: luts_smoke.mind
tests/bit_identity/: README.md  __init__.py  compare.py  corpus.json  corpus.py  gen_fixtures.py  run.sh  runner.py  sliding_window_invariant.py  test_harness_smoke.py  verify.py
tests/bit_identity/fixtures/: .gitignore  MANIFEST  request_001.mic2  request_002.mic2  request_003.mic2
tests/bit_identity/fixtures/expected/: request_003_catalog_44.sha256
tests/bit_identity/reference/: native_topk_reference.json
tests/integration/: test_catalog_v2.py  test_daemon_socket.py  test_federation_reconcile.py  test_installer_claws.py  test_installer_gemini.py  test_installer_roundtrip.py  test_installer_vibe.py  test_marketplace_registration.py  test_mind_train_contract.py  test_mindllm_handshake.py  test_route_determinism.py  test_route_freq_scale.py  test_route_prior.py  test_stride_calibration.py
tests/perf/: _bench_common.py  bench_criterion.py  bench_efficiency.py  test_route_latency_budget.py  test_score_latency.py
tests/python/: test_blas_byte_identity.py  test_deterministic_tiebreak.py  test_discovery_classify.py  test_ensure_concurrency.py  test_eval_metrics.py  test_federation_merge.py  test_installer_atomic_writes.py  test_installer_safe_write.py  test_lut_bit_identity.py  test_native_fallback.py  test_precompute_rich_text.py  test_quantize_encoder.py  test_quantize_phase1.py  test_route_bounds.py  test_runtime_dir.py  test_runtime_dir_env.py  test_scan_repo.py  test_tier3_script_floor.py  test_tokenize_maxseq.py  test_trainer_determinism.py
tests/unit/: test_encoder.mind  test_evidence.mind  test_inference.mind  test_manifest_export.mind  test_q16_16.mind  test_sha256.mind  test_tokenizer.mind  test_top_k.mind
tools/: build_encoder_cdylib.py  build_native_encoder.sh  gen_luts.py  measure_a1_5_overlap.py  quantize_encoder_to_q16.py  quantize_phase1_to_q16.py
