[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-nerve"
dynamic = ["version"]
description = "Intent-classification preselector for agent runtimes — open the library, hide the cost. Apache-2.0 source and Phase-1 weights; wheel bundles a separately licensed native runtime component (see LICENSE.md). Full documentation lives in README.md on the project homepage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "STARGA, Inc.", email = "info@star.ga" }]
keywords = [
    "agent", "agents", "llm", "mcp", "preselector",
    "intent-classification", "routing", "sentence-transformers",
    "mind-language", "ai-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "huggingface_hub>=0.20",
    "cryptography>=41.0",
]

[project.optional-dependencies]
mcp = ["mcp>=0.9"]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.5",
    "build>=1.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
mind-nerve              = "mind_nerve.cli:main"
mind-nerve-mcp          = "mind_nerve.mcp_server:main"
mind-nerve-install      = "mind_nerve.installer:main"
mind-nerve-routed       = "mind_nerve.daemon:main"
mind-nerve-routed-ensure = "mind_nerve.ensure:main"
mind-nerve-preselect    = "mind_nerve.preselect_hook:main"

[project.urls]
Homepage = "https://github.com/star-ga/mind-nerve"
Issues   = "https://github.com/star-ga/mind-nerve/issues"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.dynamic]
version = { attr = "mind_nerve.__version__" }

[tool.setuptools.package-data]
# Native accelerators are OPTIONAL: when the platform-matching shared library
# is absent (e.g. a pure-Python wheel on Windows/macOS, or a Linux .so on the
# wrong arch) the runtime degrades to the pure-Python backend. Glob every
# platform extension so a native build for any OS is packaged when present and
# simply not matched otherwise. Daemon launcher templates ship as data so the
# systemd unit / launchd plist are installed alongside the package.
mind_nerve = [
    "data/*.json",
    "data/*.bin",
    "lib/*.so",
    "lib/*.dylib",
    "lib/*.dll",
    "_native/*.so",
    "_native/*.dylib",
    "_native/*.dll",
    "_native/*.pyd",
    "templates/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]   # line-length handled by ruff format; help text + docstrings exceed

# ---------------------------------------------------------------------------
# Coverage configuration
#
# `qa-gates` runs pytest with --cov on tests/python + tests/integration.
# tests/perf/ is intentionally excluded from coverage (perf jobs run as a
# separate matrix step and would skew measurements with sleep/wall-clock
# work).
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["python/mind_nerve"]
omit = [
    "python/mind_nerve/_native.py",      # ctypes shim — exercised only when .so present
    "python/mind_nerve/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# mypy configuration
#
# Phase-1 of the audit response: strict mode is enabled only on the
# three modules that already carry good type hints and are the highest
# value to keep strict on every PR:
#   - inference.py     (public routing entry point)
#   - installer.py     (writes user config files atomically)
#   - _runtime_dir.py  (socket-dir resolution; small, well-typed)
#
# The path-by-path expansion plan is:
#   Phase 2: types.py, attestation.py, ensure.py
#   Phase 3: daemon.py, mcp_server.py, cli.py
#   Phase 4: discovery.py, federation.py, mind_train.py, marketplace.py
# Each phase lands once the module reaches strict cleanliness without
# regressing runtime behaviour.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    "catalog-builder/",
    "integrations/",
    "python/mind_nerve/_native.py",
]

# Public surface — strict per audit P0.
[[tool.mypy.overrides]]
module = [
    "mind_nerve.inference",
    "mind_nerve.installer",
    "mind_nerve._runtime_dir",
]
strict = true

# ---------------------------------------------------------------------------
# pytest configuration
#
# `integration` and `perf` markers must be registered to avoid the
# "Unknown pytest.mark" warning being escalated under `-W error`.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that touch the public Python surface (route, installer, daemon)",
    "perf: latency/throughput tests; not run on every PR",
    "stress: long-running stress tests (NIAH, leak soak); opt-in only",
    "slow: tests that take more than ~10s; opt-in only",
]

